test/tests/compiler/8_loops/invalid_parse/extra_credit/compound_assignment_invalid_decl.plx
pub fn main(none) i32 {
    loop i: i32 += 1 while i < 10 .. i += 1 {
        return 0
    }
}
